# IkG2p

./: CMakeLists.txt  README.md
IkG2p/: IkG2p.csproj  Zh_G2p.cs
IkG2p/Dicts/mandarin/: phrases_dict.txt  phrases_map.txt  user_dict.txt
IkG2pTest/: IkG2pTest.csproj  op_lab.txt  test.cs
cpp/: CMakeLists.txt
cpp/include/: CantoneseG2p.h  ChineseG2p.h  G2pRes.h  G2pglobal.h  JapaneseG2p.h  MandarinG2p.h  Syllable2p.h
cpp/res/dict/cantonese/: word.txt
cpp/res/dict/mandarin/: word.txt
cpp/src/: ChineseG2p.cpp  ChineseG2p_p.h  G2pglobal.cpp  JanpaneseG2p.cpp  JapaneseG2p_p.h  StringUtil.cpp  StringUtil.h  Syllable2p.cpp  Syllable2p_p.h
cpp/tests/: CMakeLists.txt  Common.cpp  Common.h  JyuptingTest.cpp  JyuptingTest.h  ManTest.cpp  ManTest.h  main.cpp
csharp/IkG2p/: IkG2p.csproj  IkG2p.sln  Util.cs  ZhG2p.cs
csharp/IkG2p/Properties/: AssemblyInfo.cs
csharp/IkG2p/dict/cantonese/: phrases_dict.txt
csharp/IkG2p/dict/mandarin/: phrases_dict.txt
csharp/IkG2pTest/: test.cs
csharp/Test/: Test.csproj
include/: JapaneseG2p.h  Syllable2p.h  eng2p.h  g2pglobal.h  jpg2p.h  syllable2p.h  zhg2p.h
makedict/: common.py  fanjian.txt  fanjian2.txt  makedict.py
python/Dicts/cantonese/: word.txt
python/Dicts/mandarin/: trans_word.txt  word.txt
src/: G2pglobal.cpp  JanpaneseG2p.cpp  JapaneseG2p_p.h  eng2p.cpp  g2pglobal.cpp  jpg2p.cpp  syllable2p.cpp  syllable2p_p.h  zhg2p.cpp
tests/: CMakeLists.txt  JyuptingTest.cpp  ManTest.cpp  main.cpp
